--- a/package.json
+++ b/package.json
@@ -8,9 +8,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "aos": "^2.3.4",
     "next": "12.0.7",
+    "next-sanity": "^0.4.0",
+    "polygon": "^1.0.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-animated-text": "^0.1.4",
+    "react-dom": "17.0.2",
+    "react-icons": "^4.3.1",
+    "react-polygon": "^0.2.0",
+    "react-text-transition": "^1.3.0",
+    "styled-components": "^5.3.3",
+    "text-animation": "^1.2.10",
+    "use-dark-mode": "^2.3.1"
   },
   "devDependencies": {
     "eslint": "8.6.0",
