--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "react-animated-text": "^0.1.4",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
+    "react-mt-svg-lines": "^0.9.1",
     "react-polygon": "^0.2.0",
+    "react-responsive": "^9.0.0-beta.5",
     "react-text-transition": "^1.3.0",
     "styled-components": "^5.3.3",
     "text-animation": "^1.2.10",
