--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-brands-svg-icons": "^5.15.4",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/react-fontawesome": "^0.1.16",
     "aos": "^2.3.4",
     "next": "12.0.7",
     "next-sanity": "^0.4.0",
@@ -22,7 +26,8 @@
     "react-text-transition": "^1.3.0",
     "styled-components": "^5.3.3",
     "text-animation": "^1.2.10",
-    "use-dark-mode": "^2.3.1"
+    "use-dark-mode": "^2.3.1",
+    "use-mediaquery": "^1.0.1"
   },
   "devDependencies": {
     "eslint": "8.6.0",
