--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
+    "@netlify/plugin-nextjs": "^4.1.1",
     "aos": "^2.3.4",
     "next": "12.0.7",
     "next-sanity": "^0.4.0",
