--- a/package.json
+++ b/package.json
@@ -1,40 +1,41 @@
 {
-  "name": "portfolio-frontend",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.36",
-    "@fortawesome/free-brands-svg-icons": "^5.15.4",
-    "@fortawesome/free-solid-svg-icons": "^5.15.4",
-    "@fortawesome/react-fontawesome": "^0.1.16",
-    "@netlify/plugin-nextjs": "^4.1.1",
-    "aos": "^2.3.4",
-    "autoprefixer": "^10.4.2",
-    "next": "12.0.7",
-    "next-sanity": "^0.4.0",
-    "polygon": "^1.0.2",
-    "postcss": "^8.4.5",
-    "react": "17.0.2",
-    "react-animated-text": "^0.1.4",
-    "react-dom": "17.0.2",
-    "react-icons": "^4.3.1",
-    "react-mt-svg-lines": "^0.9.1",
-    "react-polygon": "^0.2.0",
-    "react-responsive": "^9.0.0-beta.5",
-    "react-text-transition": "^1.3.0",
-    "styled-components": "^5.3.3",
-    "tailwindcss": "^3.0.13",
-    "text-animation": "^1.2.10",
-    "use-dark-mode": "^2.3.1",
-    "use-mediaquery": "^1.0.1"
-  },
-  "devDependencies": {
-    "eslint": "8.6.0",
-    "eslint-config-next": "12.0.7"
-  }
+	"name": "portfolio-frontend",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"@fortawesome/fontawesome-svg-core": "^1.2.36",
+		"@fortawesome/free-brands-svg-icons": "^5.15.4",
+		"@fortawesome/free-solid-svg-icons": "^5.15.4",
+		"@fortawesome/react-fontawesome": "^0.1.16",
+		"@netlify/plugin-nextjs": "^4.1.1",
+		"aos": "^2.3.4",
+		"autoprefixer": "^10.4.2",
+		"next": "12.0.7",
+		"next-sanity": "^0.4.0",
+		"polygon": "^1.0.2",
+		"postcss": "^8.4.5",
+		"react": "17.0.2",
+		"react-animated-text": "^0.1.4",
+		"react-dom": "17.0.2",
+		"react-icons": "^4.3.1",
+		"react-mt-svg-lines": "^0.9.1",
+		"react-polygon": "^0.2.0",
+		"react-responsive": "^9.0.0-beta.5",
+		"react-text-transition": "^1.3.0",
+		"styled-components": "^5.3.3",
+		"tailwindcss": "^3.0.13",
+		"text-animation": "^1.2.10",
+		"use-dark-mode": "^2.3.1",
+		"use-mediaquery": "^1.0.1"
+	},
+	"devDependencies": {
+		"eslint": "8.6.0",
+		"eslint-config-next": "12.0.7",
+		"babel-plugin-styled-components": "latest"
+	}
 }
