--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
 		"react-mt-svg-lines": "^0.9.1",
 		"react-polygon": "^0.2.0",
 		"react-responsive": "^9.0.0-beta.5",
+		"react-sticky": "^6.0.3",
+		"react-sticky-el": "^2.0.9",
 		"react-text-transition": "^1.3.0",
 		"styled-components": "^5.3.3",
 		"tailwindcss": "^3.0.13",
@@ -34,8 +36,8 @@
 		"use-mediaquery": "^1.0.1"
 	},
 	"devDependencies": {
+		"babel-plugin-styled-components": "latest",
 		"eslint": "8.6.0",
-		"eslint-config-next": "12.0.7",
-		"babel-plugin-styled-components": "latest"
+		"eslint-config-next": "12.0.7"
 	}
 }
