--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
 		"@netlify/plugin-nextjs": "^4.1.1",
 		"aos": "^2.3.4",
 		"autoprefixer": "^10.4.2",
+		"devicon": "^2.14.0",
+		"devicon-react-svg": "^0.2.3",
 		"next": "12.0.7",
 		"next-sanity": "^0.4.0",
 		"polygon": "^1.0.2",
