--- a/package.json
+++ b/package.json
@@ -8,15 +8,22 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@emotion/react": "^11.7.1",
+		"@emotion/styled": "^11.6.0",
 		"@fortawesome/fontawesome-svg-core": "^1.2.36",
 		"@fortawesome/free-brands-svg-icons": "^5.15.4",
 		"@fortawesome/free-solid-svg-icons": "^5.15.4",
 		"@fortawesome/react-fontawesome": "^0.1.16",
+		"@material-ui/core": "^4.12.3",
+		"@material-ui/styles": "^4.11.4",
+		"@mui/material": "^5.3.0",
+		"@mui/styled-engine-sc": "^5.1.0",
 		"@netlify/plugin-nextjs": "^4.1.1",
 		"aos": "^2.3.4",
 		"autoprefixer": "^10.4.2",
 		"devicon": "^2.14.0",
 		"devicon-react-svg": "^0.2.3",
+		"material-ui": "^1.0.0-beta.47",
 		"next": "12.0.7",
 		"next-sanity": "^0.4.0",
 		"polygon": "^1.0.2",
