--- a/package.json
+++ b/package.json
@@ -14,20 +14,19 @@
 		"@fortawesome/free-brands-svg-icons": "^5.15.4",
 		"@fortawesome/free-solid-svg-icons": "^5.15.4",
 		"@fortawesome/react-fontawesome": "^0.1.16",
+		"@headlessui/react": "^1.4.3",
 		"@material-ui/core": "^4.12.3",
 		"@material-ui/styles": "^4.11.4",
 		"@mui/material": "^5.3.0",
 		"@mui/styled-engine-sc": "^5.1.0",
 		"@netlify/plugin-nextjs": "^4.1.1",
 		"aos": "^2.3.4",
-		"autoprefixer": "^10.4.2",
 		"devicon": "^2.14.0",
 		"devicon-react-svg": "^0.2.3",
 		"material-ui": "^1.0.0-beta.47",
 		"next": "12.0.7",
 		"next-sanity": "^0.4.0",
 		"polygon": "^1.0.2",
-		"postcss": "^8.4.5",
 		"react": "17.0.2",
 		"react-animated-text": "^0.1.4",
 		"react-dom": "17.0.2",
@@ -35,18 +34,21 @@
 		"react-mt-svg-lines": "^0.9.1",
 		"react-polygon": "^0.2.0",
 		"react-responsive": "^9.0.0-beta.5",
+		"react-scroll": "^1.8.4",
 		"react-sticky": "^6.0.3",
 		"react-sticky-el": "^2.0.9",
 		"react-text-transition": "^1.3.0",
 		"styled-components": "^5.3.3",
-		"tailwindcss": "^3.0.13",
 		"text-animation": "^1.2.10",
 		"use-dark-mode": "^2.3.1",
 		"use-mediaquery": "^1.0.1"
 	},
 	"devDependencies": {
+		"autoprefixer": "^10.4.2",
 		"babel-plugin-styled-components": "latest",
 		"eslint": "8.6.0",
-		"eslint-config-next": "12.0.7"
+		"eslint-config-next": "12.0.7",
+		"postcss": "^8.4.5",
+		"tailwindcss": "^3.0.15"
 	}
 }
