--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"next-sanity": "^0.4.0",
 		"polygon": "^1.0.2",
 		"react": "17.0.2",
+		"react-animated-heart": "^0.0.7-alpha.1",
 		"react-animated-text": "^0.1.4",
 		"react-dom": "17.0.2",
 		"react-icons": "^4.3.1",
@@ -44,11 +45,13 @@
 		"use-mediaquery": "^1.0.1"
 	},
 	"devDependencies": {
+		"@heroicons/react": "^1.0.5",
 		"autoprefixer": "^10.4.2",
 		"babel-plugin-styled-components": "latest",
 		"eslint": "8.6.0",
 		"eslint-config-next": "12.0.7",
 		"postcss": "^8.4.5",
+		"react-heart": "^1.0.6",
 		"tailwindcss": "^3.0.15"
 	}
 }
