--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 		"react-sticky": "^6.0.3",
 		"react-sticky-el": "^2.0.9",
 		"react-text-transition": "^1.3.0",
+		"react-vertical-timeline-component": "^3.5.2",
 		"styled-components": "^5.3.3",
 		"text-animation": "^1.2.10",
 		"use-dark-mode": "^2.3.1",
