--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@emailjs/browser": "^3.4.0",
 		"@emotion/react": "^11.7.1",
 		"@emotion/styled": "^11.6.0",
 		"@fortawesome/fontawesome-svg-core": "^1.2.36",
@@ -24,6 +25,7 @@
 		"aos": "^2.3.4",
 		"devicon": "^2.14.0",
 		"devicon-react-svg": "^0.2.3",
+		"emailjs-com": "^3.2.0",
 		"material-ui": "^1.0.0-beta.47",
 		"next": "12.0.7",
 		"next-sanity": "^0.4.0",
