--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
 		"react-text-transition": "^1.3.0",
 		"react-vertical-timeline-component": "^3.5.2",
 		"styled-components": "^5.3.3",
+		"sweetalert": "^2.1.2",
 		"text-animation": "^1.2.10",
 		"use-dark-mode": "^2.3.1",
 		"use-mediaquery": "^1.0.1"
