--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
 		"react-sticky": "^6.0.3",
 		"react-sticky-el": "^2.0.9",
 		"react-text-transition": "^1.3.0",
+		"react-userouter": "^0.1.0",
 		"react-vertical-timeline-component": "^3.5.2",
 		"styled-components": "^5.3.3",
 		"sweetalert": "^2.1.2",
